editoast: refactoring STDCM handler
